--- a/home/static/style.css
+++ b/home/static/style.css
@@ -5,6 +5,10 @@ body {
   font-weight: 400;
   line-height: 1.5;
 }
+::selection {
+  color: #fff;
+  background: #333;
+}
 h1 {
   font-family: Menlo, Consolas, DejaVu Sans Mono, monospace;
   color: white;
